[유용민] productCard 추상화 및 mock 데이터 연결

--- a/views/main/MainPage.module.scss
+++ b/views/main/MainPage.module.scss
@@ -16,3 +16,21 @@
   height: 300px; // 적절한 높이 설정
   margin: 72px 0px;
 }
+
+.famous {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  h3 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 40px;
+  }
+  padding-bottom: 72px;
+}
+
+.item-images {
+  display: flex;
+  gap: 24px;
+}
