--- a/components/productCard/ProductCard.module.scss
+++ b/components/productCard/ProductCard.module.scss
@@ -12,6 +12,11 @@
 }
 
 .title {
+  display: flex;
+  justify-content: center;
+  padding: 16px 18px;
   width: 100%;
-  text-align: center;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
 }
