--- a/components/footer/FooterW.module.scss
+++ b/components/footer/FooterW.module.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   padding: 32px 48px;
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 .top {
