--- a/components/adCard/AdCard.module.scss
+++ b/components/adCard/AdCard.module.scss
@@ -1,6 +1,12 @@
 .container {
   display: flex;
+  justify-content: center;
   gap: 24px;
+  @media (max-width: 768px) {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .image {
@@ -10,12 +16,19 @@
   img {
     border-radius: 8px;
   }
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
+  @media (max-width: 768px) {
+    gap: 32px;
+  }
   .top {
     display: flex;
     flex-direction: column;
@@ -50,6 +63,9 @@
       color: white;
       font-weight: 700;
       font-size: 16px;
+      @media (max-width: 768px) {
+        width: 100%;
+      }
     }
   }
 }
@@ -60,9 +76,18 @@
   gap: 16px;
   background-color: #f6f8fb;
   padding: 16px;
+  width: 100%;
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .bottom-content {
-  padding: h3 {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  h3 {
     font-weight: 700;
     font-size: 14px;
     line-height: 24px;
@@ -84,4 +109,8 @@
   border: none;
   border-radius: 8px;
   padding: 12px 21px;
+  @media (max-width: 768px) {
+    display: flex;
+    justify-content: center;
+  }
 }
