--- a/components/productCard/ProductCard.module.scss
+++ b/components/productCard/ProductCard.module.scss
@@ -2,13 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 210px;
 }
 
 .image {
   position: relative;
   height: 210px;
   aspect-ratio: 1/1;
+  @media (max-width: 768px) {
+    height: 160px;
+  }
 }
 
 .title {
@@ -19,4 +21,8 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
+  @media (max-width: 768px) {
+    font-size: 14px;
+    line-height: 24px;
+  }
 }
