--- a/components/tabs/DoubleTabs.module.scss
+++ b/components/tabs/DoubleTabs.module.scss
@@ -11,8 +11,9 @@
 
 .tabContainer {
   display: flex;
+  justify-content: center;
+  width: 100dvw;
   gap: 16px;
-  flex-wrap: wrap;
   overflow: auto;
 }
 
@@ -31,7 +32,6 @@
 .mainTabButton {
   width: 64px;
   height: 64px;
-  background-color: #edeff2;
   border: none;
   color: black;
   cursor: pointer;
@@ -39,7 +39,7 @@
   transition: all 0.2s ease;
 
   &:hover {
-    background-color: #f8f9fa;
+    opacity: 0.8;
   }
 
   &.active {
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: auto;
 }
 
 .separator {
@@ -73,4 +74,29 @@
   &.active {
     border-bottom: 2px solid black;
   }
+}
+
+@media (max-width: 768px) {
+  .tabContainer {
+    width: calc(100dvw - 32px);
+    justify-content: flex-start;
+  }
+  .subTabSection .tabContainer {
+    width: 100dvw;
+    padding-left: 16px;
+    padding-right: 16px;
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    justify-content: center;
+  }
+  .subTabButton {
+    white-space: nowrap;
+    flex-shrink: 0;
+  }
+}
+
+.selectedStatus {
+  width: 100%;
+  padding: 0 32px;
 }
