--- a/views/main/MainPage.module.scss
+++ b/views/main/MainPage.module.scss
@@ -1,8 +1,13 @@
+
 .tickets {
   display: flex;
   justify-content: center;
   gap: 24px;
   padding: 64px;
+
+  @media (max-width: 768px) {
+    padding: 32px 0;
+  }
 }
 
 .tabs {
@@ -26,11 +31,51 @@
     font-weight: 700;
     font-size: 32px;
     line-height: 40px;
+    @media (max-width: 768px) {
+      font-size: 18px;
+      line-height: 26px;
+    }
   }
   padding-bottom: 72px;
 }
 
 .item-images {
-  display: flex;
-  gap: 24px;
+  .web-items {
+    display: flex;
+    gap: 24px;
+
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+
+  .mobile-items {
+    display: none;
+
+    @media (max-width: 768px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 8px;
+      max-width: 400px;
+    }
+  }
+}
+
+footer {
+  :global(.footerW) {
+    display: block;
+
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+
+  :global(.footerM) {
+    display: none;
+
+    @media (max-width: 768px) {
+      display: block;
+    }
+  }
 }
