--- a/components/adCard/AdCard.module.scss
+++ b/components/adCard/AdCard.module.scss
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   display: flex;
   justify-content: center;
   gap: 24px;
@@ -6,6 +7,7 @@
     width: 100%;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 150px;
   }
 }
 
@@ -25,7 +27,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
+
   @media (max-width: 768px) {
     gap: 32px;
   }
@@ -76,8 +78,13 @@
   gap: 16px;
   background-color: #f6f8fb;
   padding: 16px;
-  width: 100%;
+
   @media (max-width: 768px) {
+    position: absolute;
+    padding: 0;
+    bottom: -182px;
+    left: -32px;
+    width: 100dvw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -112,5 +119,6 @@
   @media (max-width: 768px) {
     display: flex;
     justify-content: center;
+    width: 100%;
   }
 }
