--- a/components/adCard/AdCard.module.scss
+++ b/components/adCard/AdCard.module.scss
@@ -65,6 +65,14 @@
       color: white;
       font-weight: 700;
       font-size: 16px;
+      cursor: pointer;
+
+      &:disabled {
+        background-color: #cccccc;
+        color: #666666;
+        cursor: not-allowed;
+      }
+
       @media (max-width: 768px) {
         width: 100%;
       }
