--- a/components/doubleTabs/DoubleTabs.module.scss
+++ b/components/doubleTabs/DoubleTabs.module.scss
@@ -15,6 +15,12 @@
   width: 100dvw;
   gap: 16px;
   overflow: auto;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .tabItem {
@@ -52,6 +58,12 @@
   flex-direction: column;
   align-items: center;
   overflow: auto;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .separator {
@@ -88,7 +100,7 @@
     white-space: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
-    justify-content: center;
+    justify-content: flex-start;
   }
   .subTabButton {
     white-space: nowrap;
