--- a/components/productCard/ProductCard.module.scss
+++ b/components/productCard/ProductCard.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  &.left {
+    align-items: flex-start;
+  }
 }
 
 .image {
@@ -11,6 +15,10 @@
   @media (max-width: 768px) {
     height: 160px;
   }
+}
+
+.content {
+  width: 100%;
 }
 
 .title {
@@ -24,5 +32,33 @@
   @media (max-width: 768px) {
     font-size: 14px;
     line-height: 24px;
+  }
+
+  .left & {
+    justify-content: flex-start;
+    padding-left: 0;
+  }
+}
+
+.description {
+  padding: 0 18px 8px;
+  font-size: 14px;
+  line-height: 22px;
+  color: #666;
+
+  .left & {
+    padding-left: 0;
+  }
+}
+
+.price {
+  padding: 0 18px 16px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #000;
+
+  .left & {
+    padding-left: 0;
   }
 }
