--- a/components/input/Input.module.scss
+++ b/components/input/Input.module.scss
@@ -14,12 +14,18 @@
 
 .input {
   width: 100%;
-  padding: 12px 16px;
+  padding: 8px 16px;
   border: 1px solid #ddd;
   border-radius: 8px;
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
   background-color: #fff;
   transition: all 0.2s ease-in-out;
+
+  &::placeholder {
+    color: #abadb0;
+  }
 
   &:focus {
     outline: none;
