--- a/views/main/MainPage.module.scss
+++ b/views/main/MainPage.module.scss
@@ -1,9 +1,42 @@
 
+.pageWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fullWidth {
+  width: 100%;
+  max-width: 1440px;
+}
+
+.contentContainer {
+  width: 100%;
+  max-width: 1440px;
+  display: flex;
+  justify-content: center;
+  padding: 0 180px;
+
+  @media (max-width: 1440px) {
+    padding: 0 32px;
+  }
+
+  @media (max-width: 768px) {
+    padding: 0 16px;
+  }
+}
+
+.content {
+  width: 100%;
+  max-width: 1080px;
+}
+
 .tickets {
   display: flex;
   justify-content: center;
   gap: 24px;
-  padding: 64px;
+  padding: 64px 0;
 
   @media (max-width: 768px) {
     padding: 32px 0;
@@ -17,8 +50,8 @@
 
 .middle-image {
   position: relative;
-  width: 100dvw;
-  height: 300px; // 적절한 높이 설정
+  width: 100%;
+  height: 300px;
   margin: 72px 0px;
 }
 
