[유용민] select 컴포넌트 컴파운드 패턴으로 변경

--- a/components/orderSection/OrderSection.module.scss
+++ b/components/orderSection/OrderSection.module.scss
@@ -33,6 +33,7 @@
     font-size: 16px;
     font-weight: 700;
     color: #ffffff;
+    cursor: pointer;
   }
   button:first-child {
     background-color: #9ec6e7;
