--- a/app/[id]/layout.module.scss
+++ b/app/[id]/layout.module.scss
@@ -10,6 +10,9 @@
   display: flex;
   justify-content: center;
   padding: 0 180px;
+  @media (max-width: 768px) {
+    padding: 0 24px;
+  }
 }
 
 .content {
