--- a/components/footer/FooterM.module.scss
+++ b/components/footer/FooterM.module.scss
@@ -4,16 +4,25 @@
   @media (min-width: 769px) {
     display: none;
   }
+  background-color: #f6f7f9;
+  color: #292c2e;
 }
 
 .top {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
+  gap: 10px;
   div {
     display: flex;
     gap: 16px;
+  }
+  a {
+    font-size: 14px;
+    font-weight: 400;
+  }
+  span {
+    font-weight: 700;
   }
 }
 
@@ -30,5 +39,6 @@
     text-align: center;
     font-size: 12px;
     line-height: 18px;
+    color: #505254;
   }
 }
