--- a/views/detail/DetailPage.module.scss
+++ b/views/detail/DetailPage.module.scss
@@ -8,8 +8,10 @@
 .title {
   font-weight: 800;
   font-size: 32px;
-
   text-align: center;
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 .product-info {
@@ -20,7 +22,7 @@
 
   @media (max-width: 768px) {
     flex-direction: column;
-    gap: 20px;
+    gap: 32px;
   }
 }
 
@@ -28,6 +30,10 @@
   position: relative;
   width: 50%;
   aspect-ratio: 1/1;
+
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .product-image {
@@ -40,6 +46,9 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .content {
