--- a/components/productCard/ProductCard.module.scss
+++ b/components/productCard/ProductCard.module.scss
@@ -13,7 +13,6 @@
   height: 210px;
   aspect-ratio: 1/1;
   @media (max-width: 768px) {
-    height: 160px;
   }
 }
 
@@ -32,6 +31,7 @@
   @media (max-width: 768px) {
     font-size: 14px;
     line-height: 24px;
+    padding-bottom: 0px;
   }
 
   .left & {
@@ -55,8 +55,7 @@
   padding: 0 18px 16px;
   font-weight: 700;
   font-size: 16px;
-  line-height: 24px;
-  color: #000;
+  color: #fd914b;
 
   .left & {
     padding-left: 0;
