--- a/components/select/Select.module.scss
+++ b/components/select/Select.module.scss
@@ -15,16 +15,15 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   font-size: 14px;
-  line-height: 24px;
+  font-weight: 400;
+  color: #505254;
   background-color: #fff;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   text-align: left;
-  span {
-    position: "absolute";
-    right: "8px";
-    top: "50%";
-    transition: "transform 0.2s";
+  svg {
+    width: 100%;
+    height: 100%;
   }
 
   &:focus {
@@ -102,7 +101,6 @@
 @media (max-width: 768px) {
   .select {
     padding: 10px 12px;
-    padding-right: 36px;
     font-size: 14px;
     background-size: 14px;
     background-position: right 10px center;
