--- a/components/allCategory/Category.module.scss
+++ b/components/allCategory/Category.module.scss
@@ -1,7 +1,11 @@
 .container {
+  flex-shrink: 0;
+  min-width: max-content;
+
   .title {
     display: flex;
     align-items: center;
+    cursor: pointer;
 
     p {
       color: #154686;
@@ -11,8 +15,19 @@
     }
   }
   .items {
-    p {
+    display: flex;
+    flex-direction: column;
+
+    .item-link {
       padding: 8px 12px;
+      color: inherit;
+      text-decoration: none;
+      transition: all 0.2s ease;
+
+      &:hover {
+        color: #154686;
+        background-color: #f6f7f9;
+      }
     }
   }
 }
