[유용민] 상호 작용 버튼에 alert 추가

--- a/components/header/HeaderW.module.scss
+++ b/components/header/HeaderW.module.scss
@@ -26,7 +26,7 @@
     display: flex;
     justify-content: space-between;
   }
-  p {
+  a {
     display: flex;
     align-items: center;
     gap: 4px;
