--- a/components/swiper/Swiper.module.scss
+++ b/components/swiper/Swiper.module.scss
@@ -25,6 +25,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 
   .title {
     position: absolute;
