--- a/src/components/allCategory/AllCategory.module.scss
+++ b/src/components/allCategory/AllCategory.module.scss
@@ -1,4 +1,4 @@
-.container {
+.Container {
   padding: 15px 48px;
   display: flex;
   align-items: flex-start;
@@ -15,7 +15,7 @@
   }
 }
 
-.zet-production {
+.ZetProduction {
   display: flex;
 
   align-items: center;
@@ -33,27 +33,27 @@
     color: #fd914b;
   }
 
-  .icon {
+  .Icon {
     margin: 14px;
   }
 }
 
 @media (max-width: 1100px) {
-  .container {
+  .Container {
     flex-wrap: wrap;
     overflow-x: visible;
   }
 }
 
 @media (max-width: 1024px) {
-  .container {
+  .Container {
     padding: 15px 24px;
     gap: 8px;
   }
 }
 
 @media (max-width: 768px) {
-  .container {
+  .Container {
     padding: 15px 16px;
     gap: 6px;
   }
