--- a/src/components/consultationBanner/ConsultationBanner.module.scss
+++ b/src/components/consultationBanner/ConsultationBanner.module.scss
@@ -1,4 +1,4 @@
-.container {
+.Container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -13,7 +13,7 @@
   }
 }
 
-.content {
+.Content {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -35,7 +35,7 @@
   }
 }
 
-.button {
+.Button {
   display: flex;
   align-items: center;
   gap: 4px;
