--- a/src/components/footer/FooterM.module.scss
+++ b/src/components/footer/FooterM.module.scss
@@ -1,4 +1,4 @@
-.container {
+.Container {
   max-width: 720px;
   padding: 16px 24px;
   @media (min-width: 769px) {
@@ -8,7 +8,7 @@
   color: #292c2e;
 }
 
-.top {
+.Top {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,14 +26,14 @@
   }
 }
 
-.separator {
+.Separator {
   width: 100%;
   height: 1px;
   background-color: #e0e0e0;
   margin: 20px 0;
 }
 
-.bottom {
+.Bottom {
   display: flex;
   p {
     text-align: center;
