--- a/src/components/swiper/Swiper.module.scss
+++ b/src/components/swiper/Swiper.module.scss
@@ -1,15 +1,15 @@
-.swiperContainer {
+.SwiperContainer {
   width: 100%;
   height: 100%;
   position: relative;
 }
 
-.swiper {
+.Swiper {
   width: 100%;
   height: 100%;
 }
 
-.slide {
+.Slide {
   width: 100%;
   height: 100%;
   display: flex;
@@ -17,7 +17,7 @@
   justify-content: center;
 }
 
-.slideContent {
+.SlideContent {
   width: 100%;
   height: 400px;
   position: relative;
@@ -27,7 +27,7 @@
   justify-content: center;
   cursor: pointer;
 
-  .title {
+  .Title {
     position: absolute;
     background-color: black;
     padding: 20px 50px;
@@ -40,7 +40,7 @@
     cursor: pointer;
   }
 
-  .description {
+  .Description {
     position: absolute;
     bottom: 40px;
     left: 50%;
