--- a/src/components/ticket/Ticket.module.scss
+++ b/src/components/ticket/Ticket.module.scss
@@ -1,16 +1,16 @@
-.container {
+.Container {
   display: flex;
   justify-content: center;
 }
 
-.image {
+.Image {
   aspect-ratio: 1/1;
   width: 102px;
   height: 102px;
   position: relative;
 }
 
-.content {
+.Content {
   padding: 12px 24px;
   h3 {
     font-size: 18px;
@@ -26,13 +26,13 @@
 }
 
 @media (max-width: 768px) {
-  .container {
+  .Container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 8px;
   }
-  .content {
+  .Content {
     padding: 0px;
     display: flex;
     flex-direction: column;
