--- a/src/layouts/detailLayout/DetailLayout.module.scss
+++ b/src/layouts/detailLayout/DetailLayout.module.scss
@@ -1,10 +1,10 @@
-.pageWrapper {
+.PageWrapper {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.contentContainer {
+.ContentContainer {
   width: 100%;
   max-width: 1440px;
   display: flex;
@@ -15,7 +15,7 @@
   }
 }
 
-.content {
+.Content {
   width: 100%;
   max-width: 1080px;
 }
