--- a/src/components/footer/FooterW.module.scss
+++ b/src/components/footer/FooterW.module.scss
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   padding: 32px 48px;
+  background-color: #edeff2;
   @media (max-width: 768px) {
-    display: none;
+    align-items: center;
+    padding: 16px 24px;
   }
 }
 
@@ -21,6 +23,22 @@
     span {
       font-weight: 700;
     }
+    @media (max-width: 768px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+    }
+  }
+
+  .TextRow {
+    display: flex;
+    gap: 16px;
+  }
+  @media (max-width: 768px) {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 8px;
   }
 }
 
@@ -28,16 +46,36 @@
   width: 100%;
   height: 1px;
   background-color: #e0e0e0;
-  margin: 20px 0;
+  margin: 16px 0;
 }
 
 .Bottom {
   display: flex;
   flex-direction: column;
   gap: 4px;
+  @media (max-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
   p {
     font-size: 12px;
     line-height: 18px;
     color: #292c2e;
+    @media (max-width: 768px) {
+      display: inline;
+    }
+  }
+}
+
+.WebOnly {
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
+
+.MobileOnly {
+  @media (min-width: 768px) {
+    display: none;
   }
 }
