--- a/src/views/detail/DetailPage.module.scss
+++ b/src/views/detail/DetailPage.module.scss
@@ -28,10 +28,11 @@
 
 .ImageSection {
   position: relative;
-  width: 50%;
+  flex: 1;
   aspect-ratio: 1/1;
 
   @media (max-width: 768px) {
+    flex: none;
     width: 100%;
   }
 }
@@ -45,8 +46,9 @@
 .InfoSection {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  flex: 1;
   @media (max-width: 768px) {
+    flex: none;
     width: 100%;
   }
 }
