--- a/src/components/adCard/AdCard.module.scss
+++ b/src/components/adCard/AdCard.module.scss
@@ -11,10 +11,13 @@
 }
 
 .Image {
-  width: 100%;
+  display: flex;
+  height: 297px;
 
   @media (max-width: 768px) {
     padding: 0px 24px;
+    width: 100%;
+    height: 100%;
   }
 
   @media (max-width: 768px) {
@@ -25,9 +28,12 @@
 .ImageInner {
   position: relative;
   width: 100%;
+  height: 100%;
   aspect-ratio: 1/1;
 
   img {
+    width: 100%;
+    aspect-ratio: 1/1;
     border-radius: 8px;
   }
 }
