--- a/src/components/doubleTabs/DoubleTabs.module.scss
+++ b/src/components/doubleTabs/DoubleTabs.module.scss
@@ -10,7 +10,7 @@
 .TabContainer {
   display: flex;
   justify-content: center;
-  width: 100dvw;
+  width: 100%;
   gap: 16px;
   overflow: auto;
 
@@ -64,7 +64,7 @@
 }
 
 .Separator {
-  width: 100dvw;
+  width: 100%;
   height: 1px;
   background-color: #e0e0e0;
 }
@@ -91,7 +91,7 @@
     justify-content: flex-start;
   }
   .SubTabSection .TabContainer {
-    width: 100dvw;
+    width: 100%;
     padding-left: 16px;
     padding-right: 16px;
     white-space: nowrap;
