--- a/src/components/adCard/AdCard.module.scss
+++ b/src/components/adCard/AdCard.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   gap: 24px;
+  width: 100%;
   @media (max-width: 768px) {
     width: 100%;
     flex-direction: column;
