--- a/src/components/doubleTabs/DoubleTabs.module.scss
+++ b/src/components/doubleTabs/DoubleTabs.module.scss
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  max-width: 100%;
   overflow: hidden;
+  width: 100%;
   gap: 48px;
   @media (max-width: 768px) {
     gap: 24px;
@@ -56,19 +55,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: auto;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  width: 100%;
 }
 
 .Separator {
   width: 100%;
   height: 1px;
   background-color: #e0e0e0;
+}
+
+.SelectedStatus {
+  width: 100%;
 }
 
 .SubTabButton {
