--- a/src/components/doubleTabs/DoubleTabs.module.scss
+++ b/src/components/doubleTabs/DoubleTabs.module.scss
@@ -14,6 +14,9 @@
   justify-content: center;
   gap: 16px;
   overflow: auto;
+  @media (max-width: 768px) {
+    padding: 0 24px;
+  }
 
   &::-webkit-scrollbar {
     display: none;
